# bayara

./: .gitignore  CHANGELOG.md  README.md  bayara.py  example.bay  out.py  pyproject.toml  run_output.txt
bayara/: ast_nodes.py  cli.py  errors.py  lexer.py  parser.py  tokens.py  transpiler.py  validator.py  version.py
data/: churn.csv  housing.csv
examples/: basic_classification.bay  basic_classification.generated.py  churn_101.bay  churn_v1.bay  churn_v2.bay  prepare_and_export.bay  regression_basic.bay
exports/: churn_prepared.csv
tests/: test_cli_smoke.py  test_parser.py
