[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bayara"
version = "1.0.2"
description = "A DSL for tabular data and classical machine learning pipelines"
authors = [
    { name = "David Gomes" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "scikit-learn",
    "joblib"
]

[project.scripts]
bayara = "bayara.cli:main"

[tool.setuptools]
packages = ["bayara"]